--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.5.1",
     "firebase": "^10.5.0",
-        "next": "^13.5.4",
+    "next": "^13.5.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-firebase-hooks": "^5.1.1",
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.3"
   },
